# ai

./: readme.md
backend/heatmap-golang/: .gitlab-ci.yml  Dockerfile  apiDoc.md  change_log.md  env-example  go.mod  go.sum  readme.md
backend/notification-service/: .gitignore  Makefile  README.md  env-bk.example  env.example  go.mod  go.sum
backend/notification-service-api/: .gitignore  .gitlab-ci.yml  README.md  env-example  requirements.txt
backend/people-counting/: .gitignore  .gitlab-ci.yml  API_DOCS.md  CHANGELOG  Dockerfile  README.md  TEST.md  docker-compose.yaml  env-example  requirements.txt
backup/golang/: .gitlab-ci.yml  Dockerfile
backup/python/: Dockerfile
bank_reconcilliation/: app.py  app1.py  doc.md  main.py
bank_reconcilliation/data/: vector_db.db
bank_reconcilliation/lib/: processor.py
bank_reconcilliation/notebook/: dataset.ipynb  reconciliation.ipynb  training.ipynb
bank_reconcilliation/run/: predic.py  start_train.py  trans_test.txt
bank_reconcilliation/src/: converter.py  extractor.py  formatter.py
bank_reconcilliation/train-env/: Dockerfile  build.sh  deployment.yaml
bank_reconcilliation/training/: test.json  train.json  val.json
banking_reconciliation/: app.py  requirements.txt
banking_reconciliation/notebook/: dataset.ipynb  reconciliation.ipynb  training.ipynb
banking_reconciliation/src/: database.py
build-ds-core/: build.md
build-ds-core/cxview-people-analytics-core-release-v4.1.5/: .dockerignore  app.sh  (+2 more)
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/: CMakeLists.txt
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/common/: TimeRecorder.cpp  common.h  custom_meta.cpp  utils.cpp  utils.h
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/gst-bytetrack/: CMakeLists.txt  gstnvbytetrack.cpp  gstnvbytetrack.h
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/gst-bytetrack/bytetrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/gst-datafilter/: Makefile  README.md  context.cpp  context.h  gstdatafilter.cpp  gstdatafilter.h
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/gst-dataprocess/: context.cpp  faiss_context.cpp  faiss_context.h
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/gst-plugins-good/gst/rtsp/: gstrtspsrc.h
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/nvmsgconv/: nvmsgconv.cpp
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/: README.md
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/cpp/csrc/cuda/: nms_rotated.cu
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/deepstream/plugins/gstyoloxparser/: gstyoloxparser.cpp
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/deepstream/plugins/include/: yolox_meta.h
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/exps/: fisheye_yolox_nano.py  person_yolox_nano.py  person_yolox_nano_rotate.py
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/tools/: demo.py  eval.py
build-ds-core/cxview-people-analytics-core-release-v4.1.5/cxview-plugin-counting/yolox/yolox/data/datasets/: coco.py
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/: CMakeLists.txt  README.md
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/common/: common.h  utils.cpp
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/docker/: Dockerfile.x86
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/: README.md
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gst-kafka/: Makefile  gstkafkaplugin.cpp  gstkafkasrc.cpp  gstkafkasrc.h
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gst-periodsrc/: gstperiodsrc.h
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gst-src-monitor/: fps.cpp  fps.h
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gst-superviser/: Makefile  gstsuperviser.cpp  gstsuperviser.h
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gstd-1-x/: configure.ac  meson.build
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gstd-1-x/debian/: changelog
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/plugins/gstd-1-x/libgstc/c/: libgstc.c
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/dlfcn/: dummy_dynamic_link.cpp
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/dlfcn/lib/: dummy_lib.cpp
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/dummy_parser/: dummy_parser.cpp
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/gstd/: list_pipelines.cpp
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/kafka/: consume_fake_.py
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/shm/: shm_test.c
c++/deploy-cxview-people-analytics-core/cxview-plugin-base/tests/udp-protocol/: cmds.md
document/: env.md  model.md
reconciliation/: app.py  requirements.txt
(+594 files in other folders)
